--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -27,6 +27,8 @@ $html-font-size: 16px;
 
 html {
   font-size: 16px;
+  height: 100%;
+  min-height: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
 }
