--- a/app/css/_footer.scss
+++ b/app/css/_footer.scss
@@ -25,7 +25,7 @@ $html-font-size: 16px;
     & li {
       margin-bottom: 9px;
     }
-    &-content {
+    & li a {
       color: #ffffff;
       font-size: rem(14px);
       border-bottom: 1px solid #ffffff;
