--- a/app/css/_header.scss
+++ b/app/css/_header.scss
@@ -16,7 +16,7 @@ $html-font-size: 16px;
 .bg-header {
   position: relative;
   overflow: hidden;
-  margin-bottom: 132px;
+  margin-bottom: 140px;
   &-bg {
     position: absolute;
     overflow: hidden;
@@ -95,9 +95,10 @@ $html-font-size: 16px;
     z-index: 2;
     &-marker {
       width: 205px;
-      padding: 9px 10px;
+      padding: 13px 10px;
       text-align: center;
       font-size: rem(18px);
+      line-height:  calc(18px / 23.4px);
       font-weight: 500;
       color: $colorBlue;
 
@@ -126,7 +127,6 @@ $html-font-size: 16px;
     z-index: 2;
     position: relative;
     &-resume {
-      // max-width: 308px;
       height: 70px;
       line-height: 70px;
       background: $colorOrange;
@@ -134,13 +134,7 @@ $html-font-size: 16px;
       color: #ffffff;
       font-size: rem(20px);
       font-weight: 600;
-
       transition: 0.3s ease;
-      img {
-        position: relative;
-        bottom: 2px;
-        vertical-align: middle;
-      }
       &:hover {
         background: #ffab36;
       }
@@ -171,15 +165,6 @@ $html-font-size: 16px;
         opacity: 1;
         right: 15px;
       }
-      img {
-        position: relative;
-        bottom: 2px;
-        vertical-align: middle;
-      }
-      // &:hover {
-      //   font-size: rem(21px);
-      //   background: #fafafa;
-      // }
     }
   }
   &-persone {
@@ -194,6 +179,7 @@ $html-font-size: 16px;
         position: absolute;
         top: 130px;
         left: 23px;
+        animation: move-top 6s ease infinite;
       }
       &__top {
         position: absolute;
@@ -204,6 +190,7 @@ $html-font-size: 16px;
         position: absolute;
         top: 269px;
         right: -63px;
+        animation: move-right 7s ease infinite;
       }
       &__frame1 {
         animation: stars 6s ease infinite;
@@ -272,15 +259,15 @@ $html-font-size: 16px;
     transform: scale(1.1) rotate(0.5deg);
   }
   25% {
-    transform: scale(1.3) rotate(0.5deg);
+    transform: scale(1.2) rotate(0.5deg);
     opacity: 1.1;
   }
   50% {
-    transform: scale(1.5) rotate(1deg);
+    transform: scale(1.3) rotate(1deg);
     opacity: 1.2;
   }
   75% {
-    transform: scale(1.3) rotate(1deg);
+    transform: scale(1.2) rotate(1deg);
     opacity: 1.1;
   }
   100% {
@@ -292,19 +279,43 @@ $html-font-size: 16px;
   0% {
     transform: rotate(7deg);
   }
-  25% {
+  15% {
+    transform: rotate(8deg);
+    opacity: 1.1;
+  }
+  27% {
     transform: rotate(9deg);
     opacity: 1.1;
   }
   50% {
-    transform: rotate(12deg);
+    transform: rotate(10deg);
     opacity: 1.2;
   }
+  65% {
+    transform: rotate(12deg);
+    opacity: 1.1;
+  }
   75% {
+    transform: rotate(11deg);
+    opacity: 1.1;
+  }
+  87% {
     transform: rotate(9deg);
     opacity: 1.1;
   }
   100% {
     transform: rotate(7deg);
   }
+}
+
+
+@keyframes move-top {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-15px); }
+  100% { transform: translateY(0); }
+}
+@keyframes move-right {
+  0%   { transform: translateX(0); }
+  50%  { transform: translateX(-15px); }
+  100% { transform: translateX(0); }
 }
