--- a/app/css/_footer.scss
+++ b/app/css/_footer.scss
@@ -44,6 +44,10 @@ $html-font-size: 16px;
       display: inline-block;
       margin-left: 19px;
       height: 32px;
+      transition: 0.3s ease;
+      &:hover {
+        transform: scale(1.1);
+      }
       img {
         max-height: 32px;
         width: 32px;
