--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -325,7 +325,10 @@ body {
       }
     }
     &-btn {
-      padding: 19px 44px;
+      display: inline-block;
+      padding: 0px 44px;
+      height: 60px;
+      line-height: 60px;
       text-align: center;
       background: $colorBlue;
       font-size: rem(18px);
