--- a/app/css/_media.scss
+++ b/app/css/_media.scss
@@ -301,6 +301,9 @@
     font-size: rem(36px);
     line-height: 50px;
   }
+  .aboutUs-group {
+    margin-bottom: 0;
+  }
 }
 @media (max-width: 400px) {
   // Generel
@@ -438,6 +441,7 @@
   .top-screen-solve-text {
     font-size: rem(20px);
   }
+
   // Footer
 }
 
