--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -721,7 +721,56 @@ body {
     color: $colorBlack;
   }
 }
-
+.popup-choose-row {
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  margin-left: -8px;
+  margin-right: -8px;
+  margin-bottom: 30px;
+}
+.popup-choose-title {
+  display: block;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: 600;
+  color: #20233e;
+  max-width: 520px;
+  line-height: 34.8px;
+  margin: 0 auto;
+  margin-bottom: 38px;
+}
+.popup-choose-form {
+  margin-bottom: 30px;
+}
+.pop-choose-input {
+  display: inline-block;
+  ::placeholder {
+    font-size: rem(16px);
+    color: $colorSilver;
+    font-weight: 400;
+  }
+}
+span.error-choose {
+  position: absolute;
+  width: 100%;
+  bottom: -20px;
+  left: 0;
+}
+.winners-title {
+  margin-bottom: 45px;
+}
+.winners-img {
+  margin-bottom: 25px;
+}
+.winners-group-num {
+  font-size: rem(20px);
+  font-weight: 600;
+  color: $colorBlack;
+}
 // Labyrinth popup style
 
 .popup-lab {
@@ -818,39 +867,6 @@ body {
   opacity: 0;
   transform: scale(1);
 }
-// .my-mfp-zoom-in.mfp-bg {
-//   opacity: 0;
-//   transform: scale(0.5);
-//   -webkit-transition: all 0.3s ease-out;
-//   -moz-transition: all 0.3s ease-out;
-//   transition: all 0.3s ease-out;
-// }
-// /* overlay animate in */
-// .my-mfp-zoom-in.mfp-bg.mfp-ready {
-//   opacity: 0.8;
-//   transform: scale(1);
-// }
-// /* overlay animate out */
-// .my-mfp-zoom-in.mfp-bg.mfp-removing {
-//   opacity: 0;
-// }
-
-// /* content at start */
-// .my-mfp-zoom-in.mfp-wrap .mfp-content {
-//   opacity: 0;
-
-//   -webkit-transition: all 0.3s ease-out;
-//   -moz-transition: all 0.3s ease-out;
-//   transition: all 0.3s ease-out;
-// }
-// /* content animate it */
-// .my-mfp-zoom-in.mfp-wrap.mfp-ready .mfp-content {
-//   opacity: 1;
-// }
-// /* content animate out */
-// .my-mfp-zoom-in.mfp-wrap.mfp-removing .mfp-content {
-//   opacity: 0;
-// }
 
 // Modificator
 .active {
