--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -911,6 +911,7 @@ span.error-choose {
     width: 100%;
     height: 100%;
     text-align: center;
+    background: rgba(255,255,255,.5);;
   }
 
   &-grid {
