--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -911,7 +911,8 @@ span.error-choose {
     width: 100%;
     height: 100%;
     text-align: center;
-    background: rgba(255,255,255,.5);;
+    background: rgba(255,255,255,.5);
+    opacity: 0;
   }
 
   &-grid {
